# blue-eyed

./: .dockerignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  nginx.conf
backend/: .env  .env.example  .gitignore  .prettierrc  Cargo.toml  package.json  pnpm-lock.yaml  shell.nix  tsconfig.json
backend/constants/: time.ts
backend/migrations/: 20231028160647_user.sql
backend/prisma/: schema.prisma
backend/src/: app.ts  env.ts  main.rs
backend/src/api/: error.rs  mod.rs
backend/src/api/v1/: auth.rs  healthcheck.rs  hello.rs  mod.rs  setup.rs  user.rs
backend/src/libs/: checkRequestToken.ts  generateRandomString.ts  getCookie.ts  getForwardedHost.ts  getServiceHostname.ts  sendAndLogError.ts  throwAndLogTRPCError.ts  throwTRPCError.ts  trpcToExpressError.ts
backend/src/procedures/: authenticatedProcedure.ts  permissionProcedure.ts  rolePermissionProcedure.ts  setupProcedure.ts
backend/src/routers/: appRouter.ts  authorizationRouter.ts  expressAuthorizationRouter.ts  permissionRouter.ts  proxyAuthRouter.ts  roleRouter.ts  setupRouter.ts  userRouter.ts
backend/src/routes/: authCheckTraefik.ts
backend/src/routes/authorization/: authorizeRoute.ts  getRedirectTokenRoute.ts
backend/src/routes/common/: permissionCheckQuery.ts
backend/src/routes/expressAuthorization/: callbackRoute.ts
backend/src/schemas/: User.ts
backend/src/services/: authentication.ts  cache.ts  env.ts  express.ts  flag.ts  invitation.ts  logging.ts  mod.rs  permission.ts  prisma.ts  privilege.ts  redirection.ts  role.ts  setup.ts  trpc.ts  user.ts
backend/src/services/setup/: handler.rs
backend/src/storage/: mod.rs  postgres.rs
(+112 files in other folders)
