[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.33.0", features = ["full"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"

axum = {version = "0.6.20", features = ["default"]}
axum-macros = "0.3.8"

validator = { version = "0.16.1", features = ["derive"] }
regex = "1.10.2"
ts-rs = "7.0.0"