[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
dotenvy = "0.15.7"

axum = { version = "0.6.20", features = ["default"] }
axum-macros = "0.3.8"
sqlx = { version = "0.7.2", features = ["postgres", "macros", "runtime-tokio", "uuid"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
anyhow = "1.0.75"

validator = { version = "0.16.1", features = ["derive"] }
regex = "1.10.2"
ts-rs = "7.0.0"
argon2 = "0.5.2"